[gd_scene load_steps=10 format=2]

[ext_resource path="res://Engine/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enimies/Boss/Boss_spider.gd" type="Script" id=2]
[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Engine/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Movimento_aletorio.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.1372, 31.2287 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.9908, 31.2457 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.1588, 31.2457 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 3 )

[node name="Timer_spawn" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Stats" parent="." instance=ExtResource( 5 )]
MaxHealth = 40

[node name="Timer_minions" type="Timer" parent="."]
wait_time = 5.0

[node name="Movimento_aletorio" parent="." instance=ExtResource( 6 )]
alcance_posic_aleatoria = 1000

[node name="Timer_start_shoot" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer_delay_shoot" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timer_spawn" to="." method="_on_Timer_spawn_timeout"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer_minions" to="." method="_on_Timer_minions_timeout"]
[connection signal="timeout" from="Timer_start_shoot" to="." method="_on_Timer_start_shoot_timeout"]
[connection signal="timeout" from="Timer_delay_shoot" to="." method="_on_Timer_delay_shoot_timeout"]

[editable path="Hitbox"]

[editable path="HurtBox"]
